--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
+REACT_APP_AGENT_TYPE="ui-coverage-scenario-report"
+
 REACT_APP_REPOSITORY_URL="https://raw.githubusercontent.com/Nikita-Filonov/ui-coverage-report"
 
 REACT_APP_API_DATE_FORMAT="YYYY-MM-DD"
