--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^22.10.5",
     "@types/react": "^19.0.6",
     "@types/react-dom": "^19.0.3",
+    "@xyflow/react": "^12.6.0",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.2.1",
     "babel-plugin-named-asset-import": "^0.3.8",
